kubernetes/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: develop
  name: ghost
  labels:
    app: ghost
spec:
  ports:
  - name: ghost
    port: 2368
    protocol: TCP
  selector:
    app: ghost
