kubernetes/apps/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: develop
  name: ghost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: ghost.amanualt.xyz
    http:
      paths:
        - path: /
          backend:
            serviceName: ghost
            servicePort: 2368
  tls:
  - hosts:
    - ghost.amanualt.xyz
    secretName: ghost-tls
